--- a/templates/workbooks/workbook.html
+++ b/templates/workbooks/workbook.html
@@ -221,7 +221,7 @@
 <script type="text/javascript">
     var base_api_url = '{{ base_api_url|safe }}';
     var base_url = '{{ base_url|safe }}';
-    var display_worksheet = {{ display_worksheet.id|safe }};
+    var display_worksheet =  '{{ display_worksheet.id|safe }}';
 
     //plot specific variables
 {#    var plots_data = {{ plots_data|safe }};#}
