--- a/templates/GenespotRE/dashboard.html
+++ b/templates/GenespotRE/dashboard.html
@@ -37,7 +37,7 @@
             <p>Workbooks store the Analyses you create -- and their related data.</p>
         </div>
         <div class="panel-footer">
-             <form id="create-workbook" method="POST" action="{% url 'workbook_create' %}">
+             <form id="create-workbook" method="POST" action="{% url 'workbook_create' %}" class="pull-left">
                 {% csrf_token %}
                  <button type="submit" class="btn btn-primary" ><i class="fa fa-plus"></i>Create a New Workbook</button>
              </form>
