Fix details for public projects

--- a/templates/projects/project_modals.html
+++ b/templates/projects/project_modals.html
@@ -43,7 +43,7 @@
     </div>
 </div>
 
-{% if project.owner.id != user.id %}
+{% if shared %}
 <!-- Remove Project Modal -->
 <div class="modal fade" id="remove-project-modal" tabindex="-1" role="dialog" aria-labelledby="remove-project-header" aria-hidden="true">
     <div class="modal-dialog">
