--- a/templates/projects/project_detail.html
+++ b/templates/projects/project_detail.html
@@ -25,11 +25,15 @@
         <li role="menuitem"><button class="btn btn-info project-delete" data-toggle="modal" data-target="#delete-project-modal">Delete</button></li>
         <li class="separator"></li>
         <li role="menuitem"><button class="btn btn-info" data-toggle="modal" data-target="#share-project-modal">Share</button></li>
-        {% else %}
+        {% elif shared %}
         <li role="menuitem"><button class="btn btn-info" data-toggle="modal" data-target="#remove-project-modal">Remove</button></li>
         <li class="separator"></li>
         {% endif %}
+        {% if project.is_public %}
+        <li><em>Public Project</em></li>
+        {% else %}
         <li role="menuitem"><button class="btn btn-link" data-toggle="modal" data-target="#share-project-modal">Shared with ({{ project.shared.count }})</button></li>
+        {% endif %}
     </ul>
 </div>
 {% endblock %}
