--- a/templates/workbooks/workbook_modals.html
+++ b/templates/workbooks/workbook_modals.html
@@ -1,5 +1,6 @@
+{% if workbook.owner.id == user.id %}
 <!-- Edit Details Modal -->
-<div class="modal fade" id="edit-workbook-details-modal" tabindex="-1" role="dialog" aria-labelledby="edit-workbook-header" aria-hidden="true">
+<div class="modal fade" id="edit-workbook-details-modal-{{ workbook.id }}" tabindex="-1" role="dialog" aria-labelledby="edit-workbook-header" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -25,7 +26,7 @@
 </div>
 
 <!-- Delete Workbook Modal -->
-<div class="modal fade" id="delete-workbook-modal" tabindex="-1" role="dialog" aria-labelledby="delete-workbook-header" aria-hidden="true">
+<div class="modal fade" id="delete-workbook-modal-{{ workbook.id }}" tabindex="-1" role="dialog" aria-labelledby="delete-workbook-header" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -44,90 +45,8 @@
     </div>
 </div>
 
-<!-- Share Workbook Modal -->
-<div class="modal fade" id="share-workbook-modal" tabindex="-1" role="dialog" aria-labelledby="delete-workbook-header" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <!--<h4 class="modal-title">Workbook Sharing</h4>-->
-                <ul class="nav nav-tabs" data-tabs="tablist">
-                    {% if workbook.owner == request.user %}
-                        <li class="active"><a href="#share" data-toggle="tab">Share</a></li>
-                    {% endif %}
-                    <li ><a href="#shared-with" data-toggle="tab">Shared With</a></li>
-                </ul>
-            </div>
-            <div class="tab-content">
-                {% if workbook.owner.id == request.user.id %}
-                <form class="tab-pane fade in active" id="share" method="POST" action="{% url 'workbook_share' workbook.id %}">
-                    {% csrf_token %}
-                    <div class="modal-body">
-                        <label for="share_users">Enter email addresses separated by a comma</label>
-                        <textarea class="form-control" name="share_users"></textarea>
-                    </div>
-                    <div class="modal-footer">
-                        <input type="submit" value="Send" class="btn btn-primary" />
-                        <button type="button" class="btn btn-link" data-dismiss="modal">Cancel</button>
-                    </div>
-                </form>
-                {% endif %}
-                <div class="tab-pane fade" id="shared-with">
-                    <div class="modal-body">
-                        {% if workbook.shares|length > 0 %}
-                        <table class="table table-striped">
-                            <thead>
-                                <tr>
-                                    <th>Name</th>
-                                    <th>Email</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                            {% for user in shared_with_users %}
-                                <tr>
-                                    <td>{{user.first_name}} {{user.last_name}}</td>
-                                    <td>{{user.email}}</td>
-                                </tr>
-                            {% endfor %}
-                            </tbody>
-                        </table>
-                        {% else %}
-                        <p class="center">This list is empty.</p>
-                        {% endif %}
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-primary" data-dismiss="modal">Ok</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-<!-- Duplicate Workbook Modal -->
-<div class="modal fade" id="copy-workbook-modal" tabindex="-1" role="dialog" aria-labelledby="copy-workbook-header" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title"></h4>
-            </div>
-            <div class="modal-body">
-                Duplicate this Workbook?
-            </div>
-            <form id="copy-workbook" method="POST" action="{% url 'workbook_copy' workbook.id %}">
-                {% csrf_token %}
-                <div class="modal-footer">
-                    <input type="submit" value="Duplicate" class="btn btn-primary" />
-                    <button type="button" class="btn btn-link" data-dismiss="modal">Cancel</button>
-                </div>
-            </form>
-        </div>
-    </div>
-</div>
-
 <!-- Create Worksheet modal-->
-<div class="modal fade" id="create-worksheet-modal" tabindex="-1" aria-labelledby="create-worksheet-header" aria-hidden="true">
+<div class="modal fade" id="create-worksheet-modal-{{ workbook.id }}" tabindex="-1" aria-labelledby="create-worksheet-header" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -145,6 +64,29 @@
                 </div>
                 <div class="modal-footer">
                     <input type="submit" value="Create" class="btn btn-primary" />
+                    <button type="button" class="btn btn-link" data-dismiss="modal">Cancel</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+{% endif %}
+
+<!-- Duplicate Workbook Modal -->
+<div class="modal fade" id="copy-workbook-modal-{{ workbook.id }}" tabindex="-1" role="dialog" aria-labelledby="copy-workbook-header" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title"></h4>
+            </div>
+            <div class="modal-body">
+                Duplicate this Workbook?
+            </div>
+            <form id="copy-workbook" method="POST" action="{% url 'workbook_copy' workbook.id %}">
+                {% csrf_token %}
+                <div class="modal-footer">
+                    <input type="submit" value="Duplicate" class="btn btn-primary" />
                     <button type="button" class="btn btn-link" data-dismiss="modal">Cancel</button>
                 </div>
             </form>
