integrated start workbook with genes, variables, projects, and cohorts on site navigation

--- a/blink_sass/components/_nav.sass
+++ b/blink_sass/components/_nav.sass
@@ -10,6 +10,16 @@
     font-weight: inherit
     &:hover
       text-decoration: none
+      box-shadow: none
+
+  button
+    background-color: transparent
+    -webkit-appearance: none
+    box-shadow: none
+    padding: 0
+    border: none
+    width: 100%
+    text-align: left
 
   ul, li
     list-style: none
